lang.java.statics.test/tests/positive/classes/innerandimportedclasssamename.yes.javtest
STATIX ok
JAVAC  ok

[jav] {
    [util] {

        [List]
        package jav.util;
        public class List {}

    }
}

[Test]
import jav.util.List;
public class Test {
    public class List {}
}

