lang.java.statics.test/tests/negative/classes/toplevelandimportclasssamename.no.javtest
STATIX fail java\.duplicates\.no-duplicate-type.*Id\(\"List\"\)
JAVAC  fail List is already defined in this compilation unit

[javas] {
    [util] {
        [List]
        package javas.util;
        public class List {}
    }
}

[List]
import javas.util.List;
public class List {}

